--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_contact_us.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_contact_us.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fake_news_background_image_"
+
     tools:context=".contact_us">
+
 
     <TextView
         android:id="@+id/logo_bar"
@@ -46,23 +49,20 @@
         android:layout_width="412dp"
         android:layout_height="57dp"
         android:layout_marginStart="159dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="194dp"
-        android:layout_marginBottom="481dp"
         android:background="@drawable/rectangle"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.451"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo_bar"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/logo_bar" />
 
     <ImageButton
         android:id="@+id/imageButton7"
         android:layout_width="52dp"
         android:layout_height="52dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginBottom="576dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="612dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn_bar"
         app:srcCompat="@drawable/contact" />
@@ -71,8 +71,8 @@
         android:id="@+id/imageButton5"
         android:layout_width="52dp"
         android:layout_height="52dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="576dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="612dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageButton6"
         app:srcCompat="@drawable/paper" />
@@ -83,10 +83,10 @@
         android:layout_height="52dp"
         android:layout_marginStart="48dp"
         android:layout_marginEnd="36dp"
-        android:layout_marginBottom="576dp"
+        android:layout_marginBottom="612dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageButton5"
-        app:layout_constraintHorizontal_bias="0.153"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/btn_bar"
         app:srcCompat="@drawable/checker" />
 
@@ -94,8 +94,8 @@
         android:id="@+id/imageButton6"
         android:layout_width="52dp"
         android:layout_height="52dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="576dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="612dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageButton7"
         app:srcCompat="@drawable/checker" />
@@ -142,7 +142,7 @@
         app:layout_constraintHorizontal_bias="0.929"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_bar"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.65"
         tools:srcCompat="@drawable/saicharan" />
 
     <ImageView
