--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width = "match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fake_news_background_image_"
     tools:context=".how_we_do_it"
     android:contentDescription="TODO">
 
@@ -113,6 +114,8 @@
             android:layout_marginEnd="337dp"
             android:layout_marginBottom="446dp"
             android:text="How We Do It"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.074"
@@ -178,7 +181,10 @@
             android:layout_marginStart="14dp"
             android:layout_marginTop="13dp"
             android:layout_marginEnd="244dp"
+            android:background="#000000"
             android:text="@string/enterwebsite"
+            android:textColor="#F4F4F4"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -231,7 +237,10 @@
             android:layout_marginTop="7dp"
             android:layout_marginEnd="336dp"
             android:layout_marginBottom="3dp"
+            android:background="#050505"
             android:text="Enter Article"
+            android:textColor="#FBFAFA"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.2"
@@ -248,6 +257,7 @@
             android:fontFamily="sans-serif"
             android:text="Check"
             android:textSize="8sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.462"
@@ -261,6 +271,8 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="206dp"
             android:text="@string/true_false"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
