--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_chamal_details.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_chamal_details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#16161D"
     android:background="@drawable/fake_news_background_image_"
     tools:context=".ChamalDetails">
 
@@ -36,4 +37,21 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView6"
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="TextSizeCheck" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/backbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="158dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="159dp"
+        android:layout_marginBottom="120dp"
+        android:background="@drawable/curvedsquarebutton"
+        android:text="Back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
