--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_contact_us.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_contact_us.xml
@@ -123,7 +123,7 @@
         app:srcCompat="@drawable/factcheck"
         tools:ignore="SpeakableTextPresentCheck" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/person1"
         android:layout_width="115dp"
         android:layout_height="128dp"
